@@ -5,17 +5,17 @@ DWD_ICON_MAPPING = {
     3: 'Sonne, bewölkt',
     4: 'Wolken',
     5: 'Nebel',
-    6: 'Nebel, rutschgefahr',
-    7: 'leichter Regen',
+    6: 'Nebel, Rutschgefahr',
+    7: 'Leichter Regen',
     8: 'Regen',
-    9: 'starker Regen',
-    10: 'leichter Regen, rutschgefahr',
-    11: 'starker Regen, rutschgefahr',
+    9: 'Starker Regen',
+    10: 'Leichter Regen, Rutschgefahr',
+    11: 'Starker Regen, Rutschgefahr',
     12: 'Regen, vereinzelt Schneefall',
     13: 'Regen, vermehrt Schneefall',
-    14: 'leichter Schneefall',
+    14: 'Leichter Schneefall',
     15: 'Schneefall',
-    16: 'starker Schneefall',
+    16: 'Starker Schneefall',
     17: 'Wolken, (Hagel)',
     18: 'Sonne, leichter Regen',
     19: 'Sonne, starker Regen',
@@ -24,13 +24,13 @@ DWD_ICON_MAPPING = {
     22: 'Sonne, vereinzelter Schneefall',
     23: 'Sonne, vermehrter Schneefall',
     24: 'Sonne, (Hagel)',
-    25: 'Sonne, (staker Hagel)',
+    25: 'Sonne, (starker Hagel)',
     26: 'Gewitter',
     27: 'Gewitter, Regen',
     28: 'Gewitter, starker Regen',
     29: 'Gewitter, (Hagel)',
     30: 'Gewitter, (starker Hagel)',
-    31: '(Wind)',
+    31: 'Wind',
     32767: 'not available'
 }
 
