@@ -6,6 +6,7 @@ v0.8.0
 - fill only Day0 to Day6 (only 7 days to be provided)
 - add Hourly.{no} data
 - fixes and cleanup for Current, Day and Daily
+- improve/fix weather condition descriptions in DWD_ICON_MAPPING
 v0.7.1
 - fix some syntax errors on python 3.11
 - check addon_data path exists
